[package]
name = "cli_password_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
rpassword = "7.3.1"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
aes-gcm = "0.10"
aes = "0.8.4"
rand = "0.8"
sha2 = "0.10"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
password-hash = "0.5.0"
